[package]
name = "rs-search"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
tokio = { version = "1.26.0", features = ["full"]}

[dependencies]
sqlx = { version = "0.6.2", features = [ "runtime-async-std-native-tls", "mysql"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"